<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="useremail">Email</string>
    <string name="userpassword">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="loginuser">Login</string>
    <string name="firebaseimage">FirebaseImage</string>
    <string name="email_password">Email / Password</string>
    <string name="facebook">Facebook</string>
    <string name="phone_number">Phone Number</string>
    <string name="FirebaseLogo">FirebaseLogo</string>
    <string name="login_here">Login here</string>
    <string name="create_an_account">Create an account</string>
    <string name="FirebaseLogoLogin">FirebaseLogoLogin</string>
    <string name="FirebaseLogoForgot">FirebaseLogoForgot</string>
    <string name="send_password">Send Password</string>
    <string name="emailForgot">EmailForgot</string>
    <string name="google">Google</string>
    <string name="facebookLogin">Facebook</string>
    <string name="btn_phone_number">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="provider">Provider</string>
    <string name="email_User">Email</string>
    <string name="prefs_file">com.example.firebaseauth.PREFERENCE_FILE_KEY</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="txt_enter_otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="didn_t_get_otp_resend">Didn´t get OTP? Resend</string>
    <string name="name_Menu">name_Menu</string>
    <string name="Lastname_Menu">Lastname_Menu</string>
</resources>