<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#039BE5"
    android:orientation="vertical"
    tools:context=".PhoneActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="309dp"
        android:layout_height="116dp"
        app:srcCompat="@drawable/logo_built_knockout" />

    <LinearLayout
        android:id="@+id/phoneLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnSendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/diseno_buton"
            android:fontFamily="casual"
            android:text="@string/send_otp"
            android:textSize="18sp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/codeLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtEnterOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/txt_enter_otp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/enter_otp"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnLoginOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/diseno_buton"
            android:fontFamily="casual"
            android:text="@string/login"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/didn_t_get_otp_resend"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>