<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#039BE5"
    android:orientation="vertical"
    tools:context=".ForgotPassActivity">

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="309dp"
        android:layout_height="116dp"
        app:srcCompat="@drawable/logo_built_knockout"
        android:contentDescription="@string/FirebaseLogoForgot" />

    <EditText
        android:id="@+id/txtEmailForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_password"
        android:layout_margin="10dp"
        android:background="@drawable/diseno_buton"/>
</LinearLayout>